@@ -86,7 +86,7 @@ public:
     // for better performance.
     const Vector<char>& buffer() const;
 
-    bool isEmpty() const { return size(); }
+    bool isEmpty() const { return !size(); }
 
     void append(const char*, int);
     void clear();
