@@ -1,3 +1,15 @@
+2010-01-05  Yong Li  <yong.li@torchmobile.com>
+
+        Reviewed by Darin Adler.
+
+        Fix an obvious bug and build errors in previous commit (r52795)
+        https://bugs.webkit.org/show_bug.cgi?id=33178
+
+        * platform/SharedBuffer.h:
+        (WebCore::SharedBuffer::isEmpty):
+        * platform/cf/SharedBufferCF.cpp:
+        (WebCore::SharedBuffer::maybeTransferPlatformData):
+
 2010-01-04  Yong Li  <yoli@rim.com>
 
         Reviewed by Darin Adler.
